// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a JavaScript function to execute 1`] = `
"// Append api/* to import from api and web/* to import from web

// To access your database uncomment the line below
// import { db } from 'api/src/lib/db'

export default async ({ args }) => {
  // Your script here...
  console.log(':: Executing script with args ::')
  console.log(args)
}
"
`;

exports[`creates a TypeScript function to execute 1`] = `
"// Append api/* to import from api and web/* to import from web

// To access your database uncomment the line below
// import { db } from 'api/src/lib/db'

interface Args {
  _: string[]
  [key: string]: unknown
}

export default async ({ args }: Args) => {
  // Your script here...
  console.log(':: Executing script with args ::')
  console.log(args)
}
"
`;
